# armada-jupyter

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: lint-and-unit.yml  lint.yml  release-to-pypi.yml  unit.yml
armada_jupyter/: __main__.py  armada.py  armada_utils.py  constants.py  podspec.py  submissions.py
armada_jupyter/temp/: cancel.py
docs/: developer.md  dnsrecords.md  kind.md  quickstart.md
docs/design/: initial-design.md
docs/dev/: cancel.py  gen_queue.py
example/: general.yml  testing.yml
files/: kind.yml
src/: start.py
tests/files/: general.yml  main.yml  multi.yml  test_sub_full.yml  test_sub_no_req.yml  test_sub_small.yml  test_sub_small_req.yml
tests/unit/: conftest.py  test_armada.py  test_armada_utils.py  test_cancel.py  test_main.py  test_mapping.py  test_podspec.py  test_submission.py  test_submission_class.py  test_submission_funcs.py  test_submit.py  test_submit_object.py  test_typer.py
